# PasswordCrack-Suite

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  README.md  RELEASE_CHECKLIST.md  diagnose_gpu_env.ps1  pyproject.toml  requirements.txt  setup_gpx.bat  setup_gpx.sh
examples/wordlists/: common.txt  rockyou-lite.txt
src/passwordcrack/: __init__.py  __main__.py  cli.py  gpx_manager.py  hash_identifier.py  hash_utils.py  hashcat_wrapper.py  main.py  results_analyzer.py  security.py  session_manager.py  simulator.py  wordlist_manager.py
src/passwordcrack/attack_engines/: __init__.py  bruteforce_engine.py  dictionary_engine.py  gpx_engine.py  hybrid_engine.py  mask_engine.py  rule_engine.py
src/passwordcrack/performance/: __init__.py  benchmark.py
src/passwordcrack/ui/: __init__.py  gui_app.py
